Hide the non-completed tabs on navbar and fixed spacing

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,7 @@
 .navbar-lewagon .navbar-brand img {
   width: 60px;
 }
+
+.nav-item {
+  margin: 0 6px;
+}
